# portal

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yaml
perf/: server_latency.py  server_throughput.py  socket_latency.py  socket_proxy.py  socket_throughput.py  test_throughput.py  throughput.py
portal/: __init__.py  batching.py  buffers.py  client.py  client_socket.py  contextlib.py  futures.py  packlib.py  poollib.py  process.py  server.py  server_socket.py  sharray.py  thread.py  utils.py
tests/: conftest.py  test_batching.py  test_client.py  test_errfile.py  test_futures.py  test_pack.py  test_process.py  test_server.py  test_socket.py  test_thread.py  utils.py
zerofun/: __init__.py  batch_server.py  batching.py  buffers.py  client.py  client_socket.py  contextlib.py  packlib.py  proc_server.py  process.py  server.py  server_socket.py  sharray.py  sockets.py  thread.py  utils.py
